@@ -19,3 +19,5 @@ depth: 1
  * Ensure tag autocompletion dropdown has a solid background (LB (Ben) Johnston)
  * Allow inline panels to be ordered (LB (Ben) Johnston)
  * Only show draft / live status tags on snippets that have `DraftStateMixin` applied (Sage Abdullah)
+ * Prevent JS error when initialising chooser modals with no tabs (LB (Ben) Johnston)
+ * Add missing vertical spacing between chooser modal header and body when there are no tabs (LB (Ben) Johnston)
